--- a/.github/workflows/github-actions-sample.yml
+++ b/.github/workflows/github-actions-sample.yml
@@ -2,10 +2,21 @@ name: sample actions
 
 on:
   push:
-    branches: main
+    branches:
+      - main
+
+defaults:
+  run:
+    working-directory: backend
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - run: echo Hello, world!
+      - uses: actions/checout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16:x
+      - run: npm ci
+      - run: npm run test
+      - run: npm run build
