--- a/.github/workflows/github-actions-sample.yml
+++ b/.github/workflows/github-actions-sample.yml
@@ -16,6 +16,8 @@ jobs:
       contents: read
     steps:
       - uses: actions/checout@v3
+        with:
+          token: ${{ secrets.GIT_HUB_TOKEN }}
       - uses: actions/setup-node@v3
         with:
           node-version: 16:x
