--- a/.github/workflows/github-actions-sample.yml
+++ b/.github/workflows/github-actions-sample.yml
@@ -19,7 +19,7 @@ jobs:
 
       - uses: actions/setup-node@v3
         with:
-          node-version: 16:x
+          node-version: 16.x
       - run: npm ci
       - run: npm run test
       - run: npm run build
