test失敗時にもアーティファクト出力をするように変更

--- a/.github/workflows/github-actions-sample.yml
+++ b/.github/workflows/github-actions-sample.yml
@@ -16,7 +16,6 @@ jobs:
       contents: read
     steps:
       - uses: actions/checkout@v3
-
       - uses: actions/setup-node@v3
         with:
           node-version: 16.x
@@ -25,6 +24,7 @@ jobs:
       - run: npm run build
 
       - uses: actions/upload-artifact@v3
+        if: always()
         with:
           name: coverage
           path: backend/coverage/**
